# todo-extractor

./: .bandit  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG  MANIFEST.in  README.md  pyproject.toml  setup.py  setup.py.bak  todo-markdown-extractor.py  todo_markdown_extractor.py  tox.ini
.github/workflows/: black.yml  flake8.yml
tests/: test_text_with_todos.md  test_todo_extract.py  test_todo_markdown_extractor.py  text_with_todos.md
todo_extract/: __init__.py  main.py  todo_extract.py
