[tool.poetry]
name = "todo_extract"
version = "0.2.2"
description = "Extract TODO items from the text file"
authors = ["Krystian Safjan <ksafjan@gmail.com>"]
license = "MIT"
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 2",
    "Programming Language :: Python :: 3",
]
keywords = ["todo", "todolist", "todo-list","extract-todo"]


[tool.poetry.dependencies]
python = "^3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
